# Secure-Document-Vault

./: CMakeLists.txt  README.md  temp.cpp
include/: Document.hpp  Encryption.hpp  Hash.hpp  User.hpp
src/: main.cpp
src/Document/: Document.cpp
src/Encryption/: Encryption.cpp  EncryptionStrategies.cpp
src/User/: User.cpp
